# pycommons

./: .buildinfo  .gitignore  CONTRIBUTING.md  CONTRIBUTING_md.html  Makefile  Makefile.html  README.html  README.md  SECURITY.md  SECURITY_md.html  genindex.html  index.html  make.sh  make_sh.html  make_venv.sh  modules.html  objects.inv  py-modindex.html  pycommons.dev.building.html  pycommons.dev.doc.html  pycommons.dev.html  pycommons.dev.tests.html  pycommons.ds.html  pycommons.html  pycommons.io.html  pycommons.math.html  pycommons.net.html  pycommons.processes.html  pycommons.strings.html  pyproject_toml.html  requirements-dev.txt  requirements.txt  requirements_txt.html  search.html  searchindex.js  setup.cfg  setup.py  setup_cfg.html  setup_py.html
.doctrees/: README.doctree  environment.pickle  index.doctree  modules.doctree  pycommons.dev.building.doctree  pycommons.dev.doc.doctree  pycommons.dev.doctree  pycommons.dev.tests.doctree  pycommons.doctree  pycommons.ds.doctree  pycommons.io.doctree  pycommons.math.doctree  pycommons.net.doctree  pycommons.processes.doctree  pycommons.strings.doctree
.doctrees/__intersphinx_cache__/: psutil_objects.inv
.github/workflows/: build.yaml  build.yml  release.yml
_modules/: index.html
_modules/pycommons/: types.html
_modules/pycommons/dev/: url_replacer.html
_modules/pycommons/dev/building/: build_info.html  make_dist.html  make_documentation.html  run_tests.html  static_analysis.html
_modules/pycommons/dev/doc/: doc_info.html  index_rst.html  process_md.html  (+1 more)
_modules/pycommons/ds/: cache.html  immutable_map.html  sequences.html
_modules/pycommons/io/: arguments.html  console.html  csv.html  parser.html  path.html  temp.html
_modules/pycommons/math/: int_math.html  primes.html  rank.html  sample_statistics.html  stream_statistics.html  streams.html
_modules/pycommons/net/: url.html
_modules/pycommons/processes/: caller.html  fork.html  multishell.html  python.html  shell.html  shell_to_file.html  system_state.html
_modules/pycommons/strings/: chars.html  enforce.html  string_conv.html  string_tools.html  tools.html
_sources/: README.md.txt  index.rst.txt  modules.rst.txt  pycommons.dev.building.rst.txt  pycommons.dev.doc.rst.txt  pycommons.dev.rst.txt  pycommons.dev.tests.rst.txt  pycommons.ds.rst.txt  pycommons.io.rst.txt  pycommons.math.rst.txt  pycommons.net.rst.txt  pycommons.processes.rst.txt  pycommons.rst.txt  pycommons.strings.rst.txt
_static/: bizstyle.js  documentation_options.js
docs/source/: conf.py  index.rst
examples/: cache.py  cache_py.html  csv_read.py  csv_read_py.html  csv_write.py  csv_write_py.html  fork.py  fork_py.html  temp.py  temp_py.html
pycommons/: __init__.py  cache.py  console.py  types.py  version.py
pycommons/dev/: process_md.py  url_replacer.py
pycommons/dev/building/: __init__.py  build_info.py  make_dist.py  make_documentation.py  run_tests.py  static_analysis.py
pycommons/dev/doc/: __init__.py  doc_info.py  index_rst.py  process_md.py  setup_doc.py
pycommons/dev/tests/: compile_and_run.py  examples_in_dir.py  examples_in_md.py  links_in_md.py
pycommons/ds/: __init__.py  cache.py  immutable_map.py  sequences.py
pycommons/io/: __init__.py  arguments.py  console.py  csv.py  parser.py  path.py  streams.py  temp.py  url.py
pycommons/math/: __init__.py  int_math.py  int_seq.py  primes.py  rank.py  sample_statistics.py  stream_statistics.py  streams.py
pycommons/net/: __init__.py  url.py
pycommons/processes/: __init__.py  caller.py  fork.py  multishell.py  python.py  shell.py  shell_to_file.py  system_state.py
pycommons/strings/: __init__.py  chars.py  enforce.py  regex.py  string_conv.py  string_tools.py  tools.py
pycommons/tests/: compile_and_run.py  examples_from_md.py  examples_in_dir.py  examples_in_md.py  links_in_md.py
tc/: class_index.html  d_01ce38f9c3dc313b___init___py.html  d_01ce38f9c3dc313b_doc_info_py.html  d_01ce38f9c3dc313b_index_rst_py.html  d_01ce38f9c3dc313b_process_md_py.html  d_01ce38f9c3dc313b_setup_doc_py.html  d_17f3f84d66e15683___init___py.html  d_17f3f84d66e15683_arguments_py.html  d_17f3f84d66e15683_console_py.html  d_17f3f84d66e15683_path_py.html  d_17f3f84d66e15683_temp_py.html  d_4428c1bac21be6f0___init___py.html  d_4428c1bac21be6f0_chars_py.html  d_4428c1bac21be6f0_enforce_py.html  d_4428c1bac21be6f0_string_conv_py.html  d_4428c1bac21be6f0_tools_py.html  d_48f236109e5b4abc___init___py.html  d_48f236109e5b4abc_compile_and_run_py.html  d_48f236109e5b4abc_examples_in_dir_py.html  d_48f236109e5b4abc_examples_in_md_py.html  d_48f236109e5b4abc_links_in_md_py.html  d_56e0e6130d078b74___init___py.html  d_56e0e6130d078b74_url_py.html  d_681ced6bb1e30adf___init___py.html  d_681ced6bb1e30adf_cache_py.html  d_681ced6bb1e30adf_immutable_map_py.html  d_9ed4511c19ca9470___init___py.html  d_9ed4511c19ca9470_int_math_py.html  d_bc6c89fae10e2095___init___py.html  d_c735eabf1ced6fef___init___py.html  d_c735eabf1ced6fef_types_py.html  d_c735eabf1ced6fef_version_py.html  d_d7428f5aafc65eca___init___py.html  d_d7428f5aafc65eca_python_py.html  d_d7428f5aafc65eca_shell_py.html  d_e1f009d001cddfca___init___py.html  d_e1f009d001cddfca_build_info_py.html  d_e1f009d001cddfca_static_analysis_py.html  function_index.html  index.html  (+55 more)
tests/: test_examples_in_examples_dir.py  test_examples_in_examples_readme_md.py  test_examples_in_readme_md.py  test_links_in_mds.py
tests/pycommons/: test_cache.py  test_types.py
tests/pycommons/ds/: test_cache.py
tests/pycommons/io/: test_parser.py  test_path.py  test_temp.py
tests/pycommons/math/: test_int_math.py  test_sample_statistics.py  test_stream_statistics.py
tests/pycommons/processes/: test_fork.py
tests/pycommons/tests/: md_empty_1.md  md_empty_2.md  md_empty_3.md  md_empty_6.md  md_no_end_mark_1.md  md_no_examples_1.md  md_no_examples_2.md  md_with_incomplete_links_1.md  md_with_incomplete_links_2.md  md_with_incomplete_links_3.md  md_with_incomplete_links_5.md  md_with_link_errors_3.md  md_with_link_errors_4.md  md_with_links_1.md  test_examples_from_md.py  test_links_in_md.py
(+47 files in other folders)
