[metadata]
name = pycommons
version = attr: pycommons.version.__version__
description = A package with utility functionality for Python projects.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    utilities
license = GPL 3.0
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12
url = https://thomasweise.github.io/pycommons
author = Thomas Weise
author_email = tweise@ustc.edu.cn
maintainer = Thomas Weise
maintainer_email = tweise@ustc.edu.cn
project_urls =
    Documentation = https://thomasweise.github.io/pycommons
    Source = https://github.com/thomasWeise/pycommons/
    Tracker = https://github.com/thomasWeise/pycommons/issues

[options]
include_package_data = True
packages = find:
python_requires = >= 3.12
zip_safe = False
install_requires =
    psutil >= 7.1.0

[options.extras_require]
dev =
    autoflake >= 2.3.1
    bandit >= 1.8.6
    certifi >= 2025.8.3
    coverage >= 7.10.7
    coverage-badge >= 1.1.2
    dlint >= 0.16.0
    dodgy >= 0.2.1
    flake8 >= 7.3.0
    flake8-bugbear >= 24.12.12
    flake8-eradicate >= 1.5.0
    flake8-use-fstring >= 1.4
    markdown >= 3.9
    minify_html >= 0.16.4
    mypy >= 1.18.2
    myst-parser >= 4.0.1
    pycodestyle >= 2.14.0
    pydocstyle >= 6.3.0
    pyflakes >= 3.4.0
    pylint >= 3.3.8
    pyroma >= 5.0
    pytest >= 8.4.2
    pytest-timeout >= 2.4.0
    ruff >= 0.13.2
    setuptools >= 80.9.0
    sphinx >= 8.2.3
    sphinx-autodoc-typehints >= 3.2.0
    testresources >= 2.0.2
    tryceratops >= 2.4.1
    twine >= 6.2.0
    unimport >= 1.3.0
    urllib3 >= 2.5.0
    virtualenv >= 20.34.0
    vulture >= 2.14
    wheel >= 0.45.1

[options.package_data]
pycommons = py.typed

[options.packages.find]
exclude =
    .coverage*
    .github*
    .mypy_cache*
    .pytest_cache*
    .ruff_cache*
    dist*
    docs*
    examples*
    pycommons.egg-info*
    tests*
