[metadata]
name = pycommons
version = attr: pycommons.version.__version__
description = A package with utility functionality for Python projects.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    utilities
license = GPL 3.0
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12
url = https://thomasweise.github.io/pycommons
author = Thomas Weise
author_email = tweise@ustc.edu.cn
maintainer = Thomas Weise
maintainer_email = tweise@ustc.edu.cn
project_urls =
    Documentation = https://thomasweise.github.io/pycommons
    Source = https://github.com/thomasWeise/pycommons/
    Tracker = https://github.com/thomasWeise/pycommons/issues

[options]
include_package_data = True
packages = find:
python_requires = >= 3.12
zip_safe = False
install_requires =
    psutil >= 7.1.3

[options.extras_require]
dev =
    autoflake >= 2.3.1
    bandit >= 1.9.2
    certifi >= 2025.11.12
    coverage >= 7.13.0
    coverage-badge >= 1.1.2
    dlint >= 0.16.0
    dodgy >= 0.2.1
    flake8 >= 7.3.0
    flake8-bugbear >= 25.11.29
    flake8-eradicate >= 1.5.0
    flake8-use-fstring >= 1.4
    markdown >= 3.10
    minify_html >= 0.18.1
    mypy >= 1.19.0
    myst-parser >= 4.0.1
    pycodestyle >= 2.14.0
    pydocstyle >= 6.3.0
    pyflakes >= 3.4.0
    pylint >= 4.0.4
    pyroma >= 5.0.1
    pytest >= 9.0.2
    pytest-timeout >= 2.4.0
    ruff >= 0.14.8
    setuptools >= 80.9.0
    sphinx >= 8.2.3
    sphinx-autodoc-typehints >= 3.5.2
    testresources >= 2.0.2
    tryceratops >= 2.4.1
    twine >= 6.2.0
    unimport >= 1.3.0
    urllib3 >= 2.6.1
    virtualenv >= 20.35.4
    vulture >= 2.14
    wheel >= 0.45.1

[options.package_data]
pycommons = py.typed

[options.packages.find]
exclude =
    .coverage*
    .github*
    .mypy_cache*
    .pytest_cache*
    .ruff_cache*
    dist*
    docs*
    examples*
    pycommons.egg-info*
    tests*
