[metadata]
name = pycommons
version = attr: pycommons.version.__version__
description = A package with utility functionality for Python projects.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    utilities
license = GPL 3.0
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12
url = https://thomasweise.github.io/pycommons
author = Thomas Weise
author_email = tweise@ustc.edu.cn
maintainer = Thomas Weise
maintainer_email = tweise@ustc.edu.cn
project_urls =
    Documentation = https://thomasweise.github.io/pycommons
    Source = https://github.com/thomasWeise/pycommons/
    Tracker = https://github.com/thomasWeise/pycommons/issues

[options]
include_package_data = True
packages = find:
python_requires = >= 3.12
zip_safe = False
install_requires =
    psutil >= 7.2.2

[options.extras_require]
dev =
    autoflake >= 2.3.3
    bandit >= 1.9.2
    certifi >= 2026.1.4
    coverage >= 7.13.4
    dlint >= 0.16.0
    dodgy >= 0.2.1
    flake8 >= 7.3.0
    flake8-2020 >= 1.8.1
    flake8-absolute-import >= 1.0.0.3
    flake8-bugbear >= 25.11.29
    flake8-builtins >= 3.1.0
    flake8-commas >= 4.0.0
    flake8-comprehensions >= 3.17.0
    flake8-docstrings >= 1.7.0
    flake8-eradicate >= 1.5.0
    flake8-length >= 0.3.1
    flake8-mutable >= 1.2.0
    flake8-pie >= 0.16.0
    flake8-printf-formatting >= 1.1.2
    flake8-pyi >= 25.5.0
    flake8-pytest-style >= 2.2.0
    flake8-use-fstring >= 1.4
    markdown >= 3.10.2
    minify_html >= 0.18.1
    mypy >= 1.19.1
    myst-parser >= 5.0.0
    pycodestyle >= 2.14.0
    pydocstyle >= 6.3.0
    pyflakes >= 3.4.0
    pylint >= 4.0.5
    pyroma >= 5.0.1
    pytest >= 9.0.2
    pytest-timeout >= 2.4.0
    ruff >= 0.15.2
    setuptools >= 80.10.2
    sphinx == 8.2.3
    sphinx-autodoc-typehints == 3.5.2
    testresources >= 2.0.2
    tryceratops >= 2.4.1
    twine >= 6.2.0
    unimport >= 1.3.1
    urllib3 >= 2.6.3
    virtualenv >= 20.39.0
    vulture >= 2.14
    wheel >= 0.46.3

[options.package_data]
pycommons = py.typed

[options.packages.find]
exclude =
    .coverage*
    .github*
    .mypy_cache*
    .pytest_cache*
    .ruff_cache*
    dist*
    docs*
    examples*
    pycommons.egg-info*
    tests*
